--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -1,9 +1,9 @@
 <div class="footer">
   <div style="float: left">
-    <img src="assets/images/OVHcloud_logo.png" style="width: 20%" />
+    <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud right logo" style="width: 20%" />
   </div>
   <div style="float: right; font-size: 0.4em">@wildagsx</div>
   <div style="margin: 0 auto; width: 100px">
-    <img src="assets/images/opensourceexperience.png" style="width: 25%" />
+    <img src="assets/images/opensourceexperience.png" alt="OSS Experience center logo" style="width: 25%" />
   </div>
 </div>
