--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -2,8 +2,8 @@
   <div style="float: left">
     <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud right logo" style="width: 20%" />
   </div>
-  <div style="float: right; font-size: 0.4em">@wildagsx</div>
-  <div style="margin: 0 auto; width: 100px">
-    <img src="assets/images/opensourceexperience.png" alt="OSS Experience center logo" style="width: 25%" />
+  <div class="author-footer">@wildagsx</div>
+  <div style="margin: 0 auto; width: 100px; text-align: center;">
+    <img src="assets/images/opensourceexperience.png" alt="OSS Experience center logo" style="width: 25%;margin: auto;" />
   </div>
 </div>
