fix: 🐛 vertical center for author in footer

--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -1,9 +1,9 @@
 <div class="footer">
-  <div style="float: left">
+  <div class="ovhcloud-footer">
     <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud right logo" style="width: 20%" />
   </div>
   <div class="author-footer">@wildagsx</div>
-  <div style="margin: 0 auto; width: 100px; text-align: center;">
-    <img src="assets/images/opensourceexperience.png" alt="OSS Experience center logo" style="width: 25%;margin: auto;" />
+  <div class="osxp-footer">
+    <img src="assets/images/opensourceexperience.png" alt="Open Source Experience center logo" style="width: 25%;margin: auto;" />
   </div>
 </div>
