--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -3,7 +3,7 @@
     <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud right logo" style="width: 20%" />
   </div>
   <div class="author-footer">@wildagsx</div>
-  <div class="osxp-footer">
-    <img src="assets/images/opensourceexperience.png" alt="Open Source Experience center logo" style="width: 25%;margin: auto;" />
+  <div class="slide-footer">
+    <img src="assets/images/SnowCampLogo500x500.png" alt="Snowcamp center logo" style="width: 25%;margin: auto;" />
   </div>
 </div>
