feat: ✨ logos and links for Devoxx France 2024

--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -4,6 +4,6 @@
   </div>
   <div class="author-footer">@wildagsx</div>
   <div class="slide-footer">
-    <img src="assets/images/SnowCampLogo500x500.png" alt="Snowcamp center logo" style="width: 25%;margin: auto;" />
+    <img src="assets/images/devoxx-footer-image.png" alt="Devoxx France footer logo" style="width: 75%;margin: auto;" />
   </div>
 </div>
