feat: ✨ Devoxx FR 2024

--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -1,9 +1,6 @@
 <div class="footer">
-  <div class="ovhcloud-footer">
-    <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud right logo" style="width: 20%" />
-  </div>
   <div class="author-footer">@wildagsx</div>
   <div class="slide-footer">
-    <img src="assets/images/devoxx-france-2024/logo-texte-devoxx-france-400.png" alt="Devoxx France footer logo" style="width: 100%;margin: auto;" />
+    <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud logo" style="width: 100%;margin: auto;" />
   </div>
 </div>
