--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -4,6 +4,6 @@
     <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud logo" style="width: 15%;" />
   </div>
   <div class="slide-footer">
-    <img src="assets/images/voxxed-days-lux-logo.png" alt="Snowcamp center logo" style="width: 60%;margin: auto;" />
+    <img src="assets/images/riviera-dev-logo.png" alt="Riviera Dev center logo" style="width: 60%;margin: auto;" />
   </div>
 </div>
