--- a/plugins/footer/footer.html
+++ b/plugins/footer/footer.html
@@ -1,9 +1,9 @@
 <div class="footer">
-  <div class="ovhcloud-footer">
-    <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud right logo" style="width: 20%" />
-  </div>
   <div class="author-footer">@wildagsx</div>
+  <div class="ovhcloud-footer">
+    <img src="assets/images/OVHcloud_logo.png" alt="OVHcloud logo" style="width: 15%;" />
+  </div>
   <div class="slide-footer">
-    <img src="assets/images/SnowCampLogo500x500.png" alt="Snowcamp center logo" style="width: 25%;margin: auto;" />
+    <img src="assets/images/riviera-dev-logo.png" alt="Riviera Dev center logo" style="width: 60%;margin: auto;" />
   </div>
 </div>
